Fixed the alignment of the check within the checkbox

--- a/src/components/Checkbox/style.scss
+++ b/src/components/Checkbox/style.scss
@@ -62,8 +62,6 @@
     display: block;
     content: '';
     background: none;
-    width: 12px;
-    height: 10px;
   }
 }
 
